KSENROLL-8181 KRMS Core components cleanup.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@52366 0ac02d80-fb3f-11dc-a574-c57244a850eb